Restyle header and slider: - Changed "Buy Tickets" button to yellow, light header background removed, text/icons set to white. - "Buy Tickets Now!" button in slider fixed to bottom left, slider text aligned left.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2626,7 +2626,7 @@ body > .eventalk-tooltip .eventalk-tooltip-bottom:after {
 }
 .header-area .stick {
   background-color: rgba(17, 17, 17, 0.9);
-  border-bottom: 2px solid #4c1864;
+  /* border-bottom: 2px solid #4c1864; */
   -webkit-transition: all 1s ease-out;
   -moz-transition: all 1s ease-out;
   -ms-transition: all 1s ease-out;
@@ -3151,13 +3151,13 @@ body > .eventalk-tooltip .eventalk-tooltip-bottom:after {
   color: #4c1864;
 }
 .light-header {
-  background-color: rgba(255, 255, 255, 0.98);
+  /* background-color: rgba(255, 255, 255, 0.98); */
 }
 .light-header .header-icon-light i {
-  color: #111111;
+  color: #ffffff;
 }
 .light-header .eventalk-main-menu nav > ul > li > a {
-  color: #111111;
+  color: #ffffff;
   padding: 25px 15px;
 }
 @media only screen and (max-width: 1199px) {
@@ -3174,8 +3174,8 @@ body > .eventalk-tooltip .eventalk-tooltip-bottom:after {
   }
 }
 .light-header .stick {
-  background-color: transparent;
-  border-bottom: 2px solid #4c1864;
+  /* background-color: transparent;
+  border-bottom: 2px solid #4c1864; */
 }
 .light-header .eventalk-main-menu nav ul .current > a {
   color: #fad03b;
@@ -3867,11 +3867,29 @@ span.menu-trigger i {
 .about-layout1 {
   text-align: center;
 }
-.about-layout1 img {
-  width: 46rem;
-  padding-right: 30px;
-  padding-left: 30px;
-  margin-bottom: 45px;
+.about-layout1 {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Отключаем margin-left: auto для слайдера */
+.slider-area .container {
+  margin-left: 0 !important;
+}
+
+/* Кнопка "Buy Tickets Now!" слева внизу */
+.slider-content {
+  position: relative;
+}
+.slider-content .slider-btn-area {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin: 20px;
+  z-index: 2;
 }
 .about-layout1 p {
   margin-bottom: 50px;
